--- a/action.yml
+++ b/action.yml
@@ -118,6 +118,14 @@ inputs:
     description: 'Package kernel use anykernel3.'
     required: false
     default: false
+  fmt:
+    description: "Kernel fmt"
+    required: false
+    default: Image
+  bootimg-url:
+    description: "boot.img path"
+    required: false
+    default: ""
   extra-cmd:
     description: 'Extra options of building kernel.'
     required: false
@@ -367,22 +375,22 @@ runs:
          echo "kernel build finish,takes" $(expr $C / 60)"min"$(expr $C % 60)"s"
 
          if [ ${{ inputs.anykernel3 }} = false ]; then
-            echo "::group:: Preparing to Upload bare-compiled-kernel"
+            echo "::group:: Preparing to Upload boot.img"
+            git clone https://github.com/Shubhamvis98/AIK
+            wget ${{ inputs.bootimg-url }} -O boot.img
+            cd AIK
+            bash unpackimg ../boot.img
+            cp ../out/arch/${{ inputs.arch }}/boot/${{ inputs.fmt }} split/kernel -v
+            bash repackimg
             mkdir -p -v ../build
-            if [ -f out/arch/${{ inputs.arch }}/boot/Image.*-dtb ]; then
-               cp out/arch/${{ inputs.arch }}/boot/Image.*-dtb ../build -rv
-            elif [ -f out/arch/${{ inputs.arch }}/boot/Image.* ]; then
-               cp out/arch/${{ inputs.arch }}/boot/Image.* ../build -rv
-            else
-               cp out/arch/${{ inputs.arch }}/boot/Image ../build -rv
-            fi
+            mv boot-new.img ../build/boot.img -v
             echo "::endgroup::"
-            else
-                echo "::group:: Packaging Anykernel3 flasher"
-                git clone https://github.com/osm0sis/AnyKernel3
-                sed -i 's!block=/dev/block/platform/omap/omap_hsmmc.0/by-name/boot;!block=auto;!g' AnyKernel3/anykernel.sh
-                sed -i 's/do.devicecheck=1/do.devicecheck=0/g' AnyKernel3/anykernel.sh
-                sed -i 's/is_slot_device=0;/is_slot_device=auto;/g' AnyKernel3/anykernel.sh
+        else
+            echo "::group:: Packaging Anykernel3 flasher"
+            git clone https://github.com/osm0sis/AnyKernel3
+            sed -i 's!block=/dev/block/platform/omap/omap_hsmmc.0/by-name/boot;!block=auto;!g' AnyKernel3/anykernel.sh
+            sed -i 's/do.devicecheck=1/do.devicecheck=0/g' AnyKernel3/anykernel.sh
+            sed -i 's/is_slot_device=0;/is_slot_device=auto;/g' AnyKernel3/anykernel.sh
         
             if [ -f out/arch/${{ inputs.arch }}/boot/Image.*-dtb ]; then
                cp out/arch/${{ inputs.arch }}/boot/Image.*-dtb AnyKernel3 -rv
