--- a/action.yml
+++ b/action.yml
@@ -424,11 +424,11 @@ runs:
             sed -i 's/is_slot_device=0;/is_slot_device=auto;/g' AnyKernel3/anykernel.sh
         
             if [ -f out/arch/${{ inputs.arch }}/boot/Image.*-dtb ]; then
-                cp out/arch/${{ inputs.arch }}/boot/Image.*-dtb build/ -rv
+                cp out/arch/${{ inputs.arch }}/boot/Image.*-dtb AnyKernel3/ -rv
             elif [ -f out/arch/${{ inputs.arch }}/boot/Image.* ]; then
-                cp out/arch/${{ inputs.arch }}/boot/Image.* build/ -rv
+                cp out/arch/${{ inputs.arch }}/boot/Image.* AnyKernel3/ -rv
             else
-                cp out/arch/${{ inputs.arch }}/boot/Image build/ -rv
+                cp out/arch/${{ inputs.arch }}/boot/Image AnyKernel3/ -rv
             fi
 
             test -f out/arch/${{ inputs.arch }}/boot/dtbo.img && cp -v out/arch/${{ inputs.arch }}/boot/dtbo.img AnyKernel3/
